[tool.poetry]
name = "web-scrapper"
version = "0.1.0"
description = ""
authors = ["itaytu <itay.tuson@3dsignals.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
aiohttp = "^3.8.4"
bs4 = "^0.0.1"
aiohttp-socks = "^0.8.0"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
